tests/suite/fail/regression/reg_mut_borrow.ny
fn main() {
    let mut v = 0
    let r = &v
    v = 1 //~ ERROR because it is borrowed
    print(r)
}
